<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">WiMo</string>
    <string name="string_app">WiMo</string>
    <string name="string_connect_to">当前连接到 : </string>
    <string name="string_setting_wifi">网络设置</string>
    <string name="string_stop">中止</string>
    <string name="string_open_wimo">传  屏</string>
    <string name="string_null">无</string>
    <string name="string_message1">使用向导</string>
    <string name="string_message2">1.请先开启手机WLAN连接,并按照电视屏幕提示连接至无线网络.</string>
    <string name="string_message3">2.回到本界面,选择\"传屏\".</string>
    <string name="string_dlg_message">正在连接设备,请稍候...</string>
    <string name="string_dlg_title">设备连接</string>
    <string name="string_cancel">取消</string>
    <string name="string_quit">退出</string>
    <string name="string_quit_info">确认要退出WiMo吗？</string>
    <string name="string_ok">确定</string>
    <!-- 
    <string name="string_error">错误</string>
     -->
    <string name="string_setting">设置</string>
    <string name="string_connected">连接成功</string>
    <string name="string_disconnected">连接断开</string>
    <string name="string_wimo_connect_stop">连接中止</string>
    <string name="string_connect_failed">连接失败</string>
    <string name="string_prompt">提示</string>
    <string name="string_turn_on">开启</string>
    <string name="string_menu_upgrade">检测新版本</string>
    <string name="string_menu_exit">退出</string>
    <string name="string_menu_about">关于</string>
    <string name="string_menu_help">帮助</string>
    <string name="string_menu_tv">电视机位置</string>
    <string name="string_wimo_running">WiMo正在运行</string>
    <string name="string_dev_name">设备名称</string>
    <string name="string_version_upgrade">版本升级</string>
    <string name="string_find_new_version">检测到有新版本</string>
    <string name="string_prompt_lastest_version">当前已是最新版本！</string>
    <string name="string_detect_version_failed">检测版本失败，请检查网络或更新服务器！</string>
    <string name="string_need_sdcard">更新失败，请插入SD卡！</string>
    <string name="string_server_error">更新失败，请检查更新服务器错误！</string>
    <string name="string_sdcard_no_mem">更新失败，SD卡空间不足！</string>
    <string name="string_v_network_error">更新失败，请检查网络！</string>
    <string name="string_obtain_fb0_error">无法获取fb0权限，WiMo无法传屏</string>
    
    
    <string name="wlan_conn_prompt">启动WiMo需要开启WLAN功能，确定开启？</string>
    <string name="net_error_info">网络错误，请设置网络</string>
    <string name="wimo_connect_timeout">连接超时</string>
    <string name="wimo_connect_timeout_info">连接超时，请稍后重试！</string>
    <string name="wimo_connect_break">连接断开</string>
    <string name="wlan_turned_off">WLAN开关已关闭，WiMo已无法使用</string>
    <string name="wlan_connected_others">已连接至其他WLAN，WiMo已无法使用</string>
    <string name="wlan_coverage_area_out">已移出WLAN覆盖区域，WiMo已无法使用</string>
    <string name="wlan_lost">WLAN连接已断开，WiMo已无法使用</string>
    <string name="wimo_connect_suspend_title">传屏中止</string>
    <string name="wimo_connect_suspend">传屏中止，其他用户已传屏至当前设备</string>
    
    <string name="install_way1">横向正常安装 </string>
    <string name="install_way2">顺时针90度安装 </string>
    <string name="install_way3">逆时针90度安装</string>
    
    <string name="string_about">关于</string>
    <string name="string_version_num">本版本号:</string>
    <string name="string_develop_company">本软件由敬达数码科技有限公司开发</string>
    <string name="string_official_website">官方网站:</string>
    <string name="string_website">http://www.cidana.com</string>
    <string name="string_cmri">CMRI</string>
    <string name="string_cmcc_producer">中国移动研究院监制</string>
    <string name="string_select_device">请选择您要传的设备</string>
    <string name="string_tv_position">电视机位置</string>
    <string name="string_upgrade_version">版本升级</string>
    <string name="string_version_checking">正在检测新版本...</string>
    <string name="string_version_newest">当前已是最新版本</string>
    <string name="string_upgrade">升级</string>
    <string name="string_upgrade_progress">0%</string>
    <string name="string_start_experience">开始体验</string>
</resources>
