<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:background="@drawable/bg_dialog"
	android:padding="5dip">
	
	<LinearLayout
		android:orientation="horizontal" 
		android:layout_width="260dip" 
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		>
		
		<ImageView 
			android:layout_width="50dip" 
			android:layout_height="50dip"
			android:background="@drawable/logo_signal"/>
		<TextView android:id="@+id/tv_title"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:textColor="#008ee0"
			android:textSize="20sp"
			android:text="@string/string_upgrade_version"/>
	</LinearLayout>
 	<ImageView 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:background="@drawable/bg_line"/>
			
	<LinearLayout android:id="@+id/checkversion_container"
		android:orientation="horizontal" 
		android:layout_width="260dip" 
		android:layout_height="50dip"
		android:layout_weight="1.0"
		android:layout_marginLeft="5dip"
		android:layout_marginTop="5dip"
		android:gravity="center"
		>
		
		<ProgressBar android:id="@+id/progress_check"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />	 
		<TextView android:id="@+id/tv_checking"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:textColor="#fff"
				android:textSize="18sp"
				android:text="@string/string_version_checking"/>
	</LinearLayout>
			
	<LinearLayout android:id="@+id/dispversion_container"
		android:orientation="vertical" 
		android:layout_width="260dip" 
		android:layout_height="wrap_content"
		android:layout_weight="1.0"
		android:layout_marginLeft="5dip"
		android:layout_marginTop="5dip"
		android:gravity="center_vertical"
		android:visibility="gone">
		
		<TextView android:id="@+id/tv_checkversion"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:textColor="#fff"
				android:textSize="18sp"
				android:text="@string/string_version_newest"/>
		<TextView android:id="@+id/tv_newversion"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:textColor="#fff"
				android:textSize="18sp"
				android:text="@string/string_null"/>
	</LinearLayout>
	
	<LinearLayout android:id="@+id/cmri_container"
		android:orientation="vertical" 
		android:layout_width="260dip" 
		android:layout_height="wrap_content"
		android:layout_marginLeft="5dip"
		android:visibility="gone">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textColor="#008ee0"
			android:textSize="16sp"
			android:text="@string/string_cmri"/>
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textColor="#fff"
			android:textSize="16sp"
			android:text="@string/string_cmcc_producer"/>
	</LinearLayout>
	
	<LinearLayout android:id="@+id/upgrade_container"
		android:orientation="vertical" 
		android:layout_width="260dip" 
		android:layout_height="wrap_content"
		android:gravity="center">
		<ProgressBar android:id="@+id/progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="220dip"
            android:layout_height="wrap_content"/>
        <RelativeLayout 
			android:orientation="horizontal" 
			android:layout_width="220dip" 
			android:layout_height="wrap_content"
			>
			<TextView  android:id="@+id/tv_percentage"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:textColor="#fff"
				android:textSize="16sp"
				android:text="@string/string_upgrade_progress"
				android:layout_alignParentLeft="true"/>
			<TextView  android:id="@+id/tv_downloaded"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:textColor="#fff"
				android:textSize="16sp"
				android:text="@string/string_null"
				android:layout_alignParentRight="true"/>		
		</RelativeLayout>
	</LinearLayout>
	
	<RelativeLayout android:id="@+id/okcancel_container"
		android:orientation="horizontal" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:layout_marginTop="10dip"
		android:paddingLeft="2dip"
		android:paddingRight="2dip"
		android:visibility="gone"
		>
		<Button android:id="@+id/btn_upgrade"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:background="@drawable/button_common"
			android:textColor="#fff"
			android:textSize="18sp"
			android:text="@string/string_upgrade"/>
		<Button android:id="@+id/btn_cancel"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:background="@drawable/button_common"
			android:textColor="#fff"
			android:textSize="18sp"
			android:text="@string/string_cancel"/>
	</RelativeLayout>
	
	<RelativeLayout android:id="@+id/cancel_container"
		android:orientation="horizontal" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:layout_marginTop="10dip"
		android:paddingLeft="2dip"
		android:paddingRight="2dip"
		>
		<Button android:id="@+id/btn_cancel_sigle"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:background="@drawable/button_common"
			android:textColor="#fff"
			android:textSize="18sp"
			android:text="@string/string_cancel"/>
	</RelativeLayout>
</LinearLayout>